--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,18 @@
 @import "tailwindcss";
 
+/* Hide number input arrows globally */
+.no-number-arrows::-webkit-outer-spin-button,
+.no-number-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+.no-number-arrows {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 :root {
   --background: #f0f4f8;
   --foreground: #1a202c;
